<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/result"
        android:textColor="#4CAF50"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter1id" />

    <Button
        android:id="@+id/modeid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:text="@string/mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Xid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divisionid"
        app:layout_constraintTop_toBottomOf="@+id/enter2id" />

    <Button
        android:id="@+id/divisionid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/division"
        app:layout_constraintEnd_toStartOf="@+id/Xid"
        app:layout_constraintStart_toEndOf="@+id/plusid"
        app:layout_constraintTop_toBottomOf="@+id/enter2id" />

    <Button
        android:id="@+id/plusid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@+id/divisionid"
        app:layout_constraintStart_toEndOf="@+id/minusid"
        app:layout_constraintTop_toBottomOf="@+id/enter2id" />

    <Button
        android:id="@+id/minusid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/plusid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter1id" />

    <EditText
        android:id="@+id/enter1id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/deff"
        android:inputType="numberSigned"
        android:scrollbarDefaultDelayBeforeFade="400"
        android:selectAllOnFocus="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/enter2id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/deff"
        android:inputType="numberSigned"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="#4CAF50"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/calcul_foreground" />

    <Button
        android:id="@+id/clearid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="clear"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter2id" />

    <Button
        android:id="@+id/pawerid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:onClick="pawer"
        android:text="@string/pawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/pawer2id"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="pawer2"
        android:text="@string/pawer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/positiveid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:onClick="positive"
        android:text="@string/positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/vectorid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="324dp"
        android:layout_marginRight="324dp"
        android:onClick="vector"
        android:text="@string/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/radicalid"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="220dp"
        android:layout_marginRight="220dp"
        android:onClick="radical"
        android:text="@string/radical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/childid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="visible"
        android:text="@string/child"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forchildid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/for_children"
        android:textColor="#4CAF50"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/showid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="show"
        android:text="@string/show"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>